--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,21 @@
   top: 5%;
   left: 5%;
 }
+.custom-tag {
+  position: absolute;
+  bottom: 11%;
+  left: 5%;
+}
+.custom-tag .ant-tag {
+  padding: 10px;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.ant-tag p {
+  font-size: 16px;
+  margin-bottom: 0.25em;
+}
 
 .mapboxgl-popup-content {
   padding-top: 8px !important;
